# microsoft-tasks-mcp

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  ENGINEERING_PRINCIPLES.md  PROJECT_SPECIFICS.md  README.md  pyproject.toml  repo.ini
.github/workflows/: ci.yml  release.yml
docs/: app-concept.md
docs/proposals/: 2026-05-09-cross-tenant-unified-view.md  2026-05-09-graph-search-api-spike.md  2026-05-09-planner-change-notifications.md
scripts/: renew-harness-token.sh
src/microsoft_tasks_mcp/: __init__.py  cli.py  login_state.py  server.py  task_registry.py
src/microsoft_tasks_mcp/auth/: __init__.py  account_type.py  flow.py  store.py  tokens.py
src/microsoft_tasks_mcp/tools/: __init__.py  _common.py  _references.py  _shape.py  _writes_common.py  login_begin.py  login_status.py  planner_buckets.py  planner_plan_get.py  planner_plans.py  planner_task_add_reference.py  planner_task_complete.py  planner_task_create.py  planner_task_delete.py  planner_task_get.py  planner_task_remove_reference.py  planner_task_update.py  planner_tasks.py  tasks_assigned_to_me.py  tasks_changes_since.py  tasks_search.py  tasks_status.py  todo_list_get.py  todo_lists.py  todo_task_complete.py  todo_task_create.py  todo_task_delete.py  todo_task_get.py  todo_task_update.py  todo_tasks.py
tests/: conftest.py  run_tests.sh
tests/harness/: test_auth_smoke.py  test_consent_gate.py  test_cross_source.py  test_login_status.py  test_onboarding_naive_agent.py  test_personal_account.py  test_planner_read.py  test_planner_writes.py  test_todo_read.py  test_todo_writes.py
tests/integration/: test_cross_source_tools.py  test_planner_read_tools.py  test_todo_read_tools.py
tests/unit/: test_cli.py  test_login_state.py  test_server.py  test_smoke.py  test_task_registry.py
tests/unit/auth/: test_account_type.py  test_flow.py  test_init.py  test_store.py
tests/unit/tools/: test_common.py  test_login_begin.py  test_login_status.py  test_planner_buckets.py  test_planner_plan_get.py  test_planner_plans.py  test_planner_task_add_reference.py  test_planner_task_complete.py  test_planner_task_create.py  test_planner_task_delete.py  test_planner_task_get.py  test_planner_task_remove_reference.py  test_planner_task_update.py  test_planner_tasks.py  test_references.py  test_shape.py  test_tasks_assigned_to_me.py  test_tasks_changes_since.py  test_tasks_search.py  test_tasks_status.py  test_todo_list_get.py  test_todo_lists.py  test_todo_task_complete.py  test_todo_task_create.py  test_todo_task_delete.py  test_todo_task_get.py  test_todo_task_update.py  test_todo_tasks.py  test_writes_common.py
