# SPDX-License-Identifier: MIT OR Apache-2.0
# SPDX-FileCopyrightText: 2026 XMV Solutions GmbH
# SPDX-FileContributor: David Koller <david.koller@xmv.de>

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-microsoft-tasks"
version = "0.2.0"
description = "MCP server for Microsoft Tasks (Planner + To Do, unified) — read-only by default, writes opt-in, never modifies tasks the agent didn't create."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT OR Apache-2.0"
license-files = ["LICENSE-MIT", "LICENSE-APACHE"]
authors = [
    { name = "XMV Solutions GmbH", email = "oss@xmv.de" },
]
maintainers = [
    { name = "David Koller", email = "david.koller@xmv.de" },
]
keywords = ["mcp", "microsoft-tasks", "planner", "todo", "microsoft-graph", "model-context-protocol", "ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2",
    "mcp-microsoft-graph-auth>=0.1.1",
    "httpx>=0.28",
    "keyring>=25",
    "cryptography>=42",
]

[project.urls]
Homepage = "https://github.com/XMV-Solutions-GmbH/microsoft-tasks-mcp"
Repository = "https://github.com/XMV-Solutions-GmbH/microsoft-tasks-mcp"
Issues = "https://github.com/XMV-Solutions-GmbH/microsoft-tasks-mcp/issues"
Changelog = "https://github.com/XMV-Solutions-GmbH/microsoft-tasks-mcp/blob/main/CHANGELOG.md"

[project.scripts]
mcp-server-microsoft-tasks = "microsoft_tasks_mcp.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["src/microsoft_tasks_mcp"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802"]  # allow non-snake-case test method names if useful

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
no_implicit_reexport = true
files = ["src/microsoft_tasks_mcp", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false
disallow_untyped_calls = false  # keyring + cryptography lack type stubs; tests
                                # use them directly to construct fake backends.

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "unit: pure-function unit tests; all externals mocked, sub-second",
    "integration: tests with boundary mocks (no real Microsoft Graph)",
    "harness: tests against the real Microsoft 365 sandbox; require credentials",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/microsoft_tasks_mcp"]
branch = true
parallel = false

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
